README: Expand whishlist

--- a/README
+++ b/README
@@ -1,3 +1,10 @@
 TODO:
-- Install nerdfont
+- Research configurable (i.e. autocomplete or popup) commands
+- Auto setup nerdfont
 - Alacrity shell emulator
+- tmux
+- zsh:
+-- Use fd instead of find
+-- diff-so-fancy better git diffs
+-- fuzzy-fs fuzzy file system navigator
+-- fzf-tab fuzzy find over completions
