README: Add disable shared tmux sesion on opening terminal

--- a/README
+++ b/README
@@ -11,6 +11,7 @@ whish-list:
 - zoxide: replacement for cd?
 
 - zsh:
+-- Don't go into same tmux sesion when opening terminal
 -- fzf:
 --- fzf kill
 --- own fzf tab complete
