README: Add new whishlist items

--- a/README
+++ b/README
@@ -4,6 +4,7 @@ Note:
 whish-list:
 - Auto setup nerdfont
 
+- Use zellij instead of tmux
 - Use lf or vifm or nnn instead of ranger
 - Use command line bitwarden
 - dragon: for enabling drag and drop https://github.com/mwh/dragon
@@ -17,3 +18,6 @@ whish-list:
 --- own fzf history search
 --- fzf previews
 
+- nvim:
+-- Remove pop-up terminal (use tmux instead)
+-- Remove telescope-tasks (use zsh functions instead)
