--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Note:
 - Alacrity/kitty doesn't work through NIX. Install through normal means.
 - Install copy-past utilities on host system (xclip for x11).
-- Install obsidian on host machine
+- Install libstdc++{version}-dev on host machine.
 
 whish-list:
 - Use regolith like desctop environment?
@@ -10,4 +10,3 @@ whish-list:
 -- image.nvim needs kitty terminal
 -- zk and zk-nvim
 -- neorg
--- obsidian with git plugin
