--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Note:
 - Alacrity/kitty doesn't work through NIX. Install through normal means.
 - Install copy-past utilities on host system (xclip for x11).
-- Install libstdc++{version}-dev on host machine.
+- Install libstdc++{version}-dev on host machine, where version must be the same as the used clang compiler.
 
 whish-list:
 - Use regolith like desctop environment?
