--- a/README
+++ b/README
@@ -1,5 +1,4 @@
 - Alacrity/kitty doesn't work through NIX. Install through normal means.
--- Or use `nixGL alacritty`
-- Install copy-past utilities on host system (xclip for x11).
+-- Or use `nixGL alacritty`, can't figure out on how to call it through awesome though.
 - Install libstdc++{version}-dev on host machine, where version must be the same as the used clang compiler.
 -- Or latest version supported by the repo and pray.
